# progetto

./: .gitignore  CMakeLists.txt  algo.cpp  algo.hpp  main.cpp
Parte1/: CMakeLists.txt  graphics.cpp  graphics.hpp  graphics1.cpp  graphics1.hpp  main.cpp  pandemy.cpp  pandemy.hpp  pandemy1.cpp  pandemy1.hpp  test.cpp
Parte2/: CMakeLists.txt  graphics.cpp  graphics.hpp  graphics2.cpp  graphics2.hpp  main.cpp  pandemy.cpp  pandemy.hpp  pandemy2.cpp  pandemy2.hpp
automa/: automa_sfml.hpp  main_a.cpp
automa/mouse/: Mondo_grande_porti.psd  automa_mouse.hpp  graphics.cpp  graphics.hpp  main_a.cpp  pandemy.cpp  pandemy.hpp
