ADD_EXECUTABLE(parte1 main.cpp)
ADD_EXECUTABLE(test test.cpp)

ADD_LIBRARY(Graphics1 STATIC graphics1.cpp)
ADD_LIBRARY(Pandemy1 STATIC pandemy1.cpp)

TARGET_LINK_LIBRARIES(parte1 Graphics1 Pandemy1 sfml-system sfml-graphics)
SET_TARGET_PROPERTIES(parte1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/Parte1/bin")
TARGET_LINK_LIBRARIES(test Graphics1 Pandemy1)
SET_TARGET_PROPERTIES(test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/Parte1/testbin/")